change spacing of faq section

--- a/faq.html
+++ b/faq.html
@@ -24,8 +24,8 @@
                 product and billing.
             </p>
 
-            <div class="accordian px-4 mt_lg_40 p-4 mt-4 ">
-                <div class="accordion-click-part d-flex justify-content-between cursor-poniter gap-">
+            <div class="accordian px-4 mt_lg_40 mt-4 ">
+                <div class="accordion-click-part d-flex justify-content-between cursor-poniter gap-3 pt-4">
                     <h3 class="font-sora fw-semibold text-faqBlack text-xmd md-text-lg mb-0">Steps required for broker
                         order
                         integration in
@@ -39,7 +39,7 @@
                         <img src="./assets/images/png/accodeina-add-img.png" alt="add img" class="w-100 h-100">
                     </div>
                 </div>
-                <div class="accordian_hidden_text max-w-850">
+                <div class="accordian_hidden_text max-w-850 pb-4">
                     <div class="d-flex align-items-baseline gap-2 pt-2">
                         <div class="dots"></div>
                         <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">Login into KeepSL via
@@ -61,8 +61,8 @@
                     </div>
                 </div>
             </div>
-            <div class="accordian px-4 mt-3 p-4">
-                <div class="accordion-click-part d-flex justify-content-between cursor-poniter gap-3">
+            <div class="accordian px-4 mt-3">
+                <div class="accordion-click-part d-flex justify-content-between cursor-poniter gap-3 pt-4">
                     <h3 class="font-sora fw-semibold text-faqBlack text-xmd md-text-lg mb-0">
                         How does live deployment work?
                     </h3>
@@ -74,7 +74,7 @@
                         <img src="./assets/images/png/accodeina-add-img.png" alt="add img" class="w-100 h-100">
                     </div>
                 </div>
-                <div class="accordian_hidden_text max-w-850">
+                <div class="accordian_hidden_text max-w-850 pb-4">
                     <div class="d-flex align-items-baseline gap-2 pt-2">
                         <div class="dots"></div>
                         <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">Login into KeepSL via
@@ -96,8 +96,8 @@
                     </div>
                 </div>
             </div>
-            <div class="accordian px-4 mt-3 p-4">
-                <div class="accordion-click-part d-flex justify-content-between cursor-poniter gap-2">
+            <div class="accordian px-4 mt-3 ">
+                <div class="accordion-click-part d-flex justify-content-between cursor-poniter gap-2 pt-4">
                     <h3 class="font-sora fw-semibold text-faqBlack  md-text-lg mb-0 text-xmd">Can I manually close the
                         positions
                         taken
@@ -111,7 +111,7 @@
                         <img src="./assets/images/png/accodeina-add-img.png" alt="add img" class="w-100 h-100">
                     </div>
                 </div>
-                <div class="accordian_hidden_text max-w-850">
+                <div class="accordian_hidden_text max-w-850 pb-4">
                     <div class="d-flex align-items-baseline gap-2 pt-2">
                         <div class="dots"></div>
                         <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">Login into KeepSL via
