--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>keepSL</title>
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./assets/images/png/Keepsl_logo.png" type="image/x-icon">
     <!----------------------- bootstrip css link ----------------->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- slick slider link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css"
         integrity="sha512-6lLUdeQ5uheMFbWm3CP271l14RsX1xtx+J5x2yeIDkkiBpeVTNhTqijME7GgRKKi6hCqovwCoBTlRBEC20M8Mg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -18,6 +21,7 @@
 </head>
 
 <body>
+
     <!---------------------------- slider Section ------------------------>
     <section class="py-Broker">
         <div class="container-keepSL">
@@ -73,6 +77,7 @@
             </div>
         </div>
     </section>
+
     <!------------------------ FAQ SECTION ------------------->
     <section>
         <div class="container-keepSL">
@@ -102,19 +107,19 @@
                 <div class="accordian_hidden_text max-w-850 pb-4">
                     <div class="d-flex align-items-baseline gap-2 pt-2">
                         <div class="dots"></div>
-                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">Login into KeepSL via
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">Login into KeepSL via
                             your
                             broker.</p>
                     </div>
                     <div class="d-flex align-items-baseline gap-2">
                         <div class="dots"></div>
-                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">Create a live
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">Create a live
                             deployment
                             to place an order and verify it in your broker terminal.</p>
                     </div>
                     <div class="d-flex align-items-baseline gap-2">
                         <div class="dots"></div>
-                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">NOTE :You must log in
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">NOTE :You must log in
                             daily to KeepSL via the same broker account for orders that need to be executed from KeepSL
                             on
                             that day.</p>
@@ -137,19 +142,19 @@
                 <div class="accordian_hidden_text max-w-850 pb-4">
                     <div class="d-flex align-items-baseline gap-2 pt-2">
                         <div class="dots"></div>
-                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">Login into KeepSL via
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">Login into KeepSL via
                             your
                             broker.</p>
                     </div>
                     <div class="d-flex align-items-baseline gap-2">
                         <div class="dots"></div>
-                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">Create a live
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">Create a live
                             deployment
                             to place an order and verify it in your broker terminal.</p>
                     </div>
                     <div class="d-flex align-items-baseline gap-2">
                         <div class="dots"></div>
-                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">NOTE :You must log in
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">NOTE :You must log in
                             daily to KeepSL via the same broker account for orders that need to be executed from KeepSL
                             on
                             that day.</p>
@@ -174,19 +179,19 @@
                 <div class="accordian_hidden_text max-w-850 pb-4">
                     <div class="d-flex align-items-baseline gap-2 pt-2">
                         <div class="dots"></div>
-                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">Login into KeepSL via
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">Login into KeepSL via
                             your
                             broker.</p>
                     </div>
                     <div class="d-flex align-items-baseline gap-2">
                         <div class="dots"></div>
-                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">Create a live
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">Create a live
                             deployment
                             to place an order and verify it in your broker terminal.</p>
                     </div>
                     <div class="d-flex align-items-baseline gap-2">
                         <div class="dots"></div>
-                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">NOTE :You must log in
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">NOTE :You must log in
                             daily to KeepSL via the same broker account for orders that need to be executed from KeepSL
                             on
                             that day.</p>
@@ -212,7 +217,8 @@
 
         </div>
     </section>
-    <!-- Free Trial -->
+
+    <!---------------- Free Trial ------------------>
     <section class="px-3 ptFreeTrial">
         <div
             class="container-keepSL freeTrialSec d-flex align-items-center justify-content-center flex-column py-media-freeTrial">
@@ -228,6 +234,7 @@
             </button>
         </div>
     </section>
+
     <!-------------------- stay updated with keepSL ------------------------>
     <section class="py-Broker">
         <div class="container max-w-920 mx-auto">
@@ -269,7 +276,8 @@
             </div>
         </div>
     </section>
-    <!-- Footer Section -->
+
+    <!--=------------- Footer Section ----------------->
     <footer class="footerProp">
         <div class="container-keepSL">
             <div class="row justify-content-between">
@@ -288,7 +296,7 @@
                         <a href="tel:123456789" class="font-sora fw-normal text-sm text-white">Tel. 9844858629</a>
                     </div>
                 </div>
-                <div class="col-md-2 col-6 d-flex flex-column align-items-start justify-content-start">
+                <div class="col-md-3 col-6 d-flex flex-column align-items-start justify-content-start">
                     <p class="font-sora text-base text-white mbFooterLink">Navigation</p>
                     <a href="#"
                         class="font-sora text-sm text-white opacity-75 fw-normal mbFooterSubLink footerLink">About Us
@@ -326,6 +334,8 @@
             </div>
         </div>
     </footer>
+
+    <!---------------- slider links ------------>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
