added scroll to top

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body>
+<body class="wideProp">
 
     <!---------------------------- slider Section ------------------------>
     <section class="py-Broker">
@@ -107,19 +107,22 @@
                 <div class="accordian_hidden_text max-w-850 pb-4">
                     <div class="d-flex align-items-baseline gap-2 pt-2">
                         <div class="dots"></div>
-                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">Login into KeepSL via
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">Login into
+                            KeepSL via
                             your
                             broker.</p>
                     </div>
                     <div class="d-flex align-items-baseline gap-2">
                         <div class="dots"></div>
-                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">Create a live
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">Create a
+                            live
                             deployment
                             to place an order and verify it in your broker terminal.</p>
                     </div>
                     <div class="d-flex align-items-baseline gap-2">
                         <div class="dots"></div>
-                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">NOTE :You must log in
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">NOTE :You
+                            must log in
                             daily to KeepSL via the same broker account for orders that need to be executed from KeepSL
                             on
                             that day.</p>
@@ -142,19 +145,22 @@
                 <div class="accordian_hidden_text max-w-850 pb-4">
                     <div class="d-flex align-items-baseline gap-2 pt-2">
                         <div class="dots"></div>
-                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">Login into KeepSL via
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">Login into
+                            KeepSL via
                             your
                             broker.</p>
                     </div>
                     <div class="d-flex align-items-baseline gap-2">
                         <div class="dots"></div>
-                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">Create a live
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">Create a
+                            live
                             deployment
                             to place an order and verify it in your broker terminal.</p>
                     </div>
                     <div class="d-flex align-items-baseline gap-2">
                         <div class="dots"></div>
-                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">NOTE :You must log in
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">NOTE :You
+                            must log in
                             daily to KeepSL via the same broker account for orders that need to be executed from KeepSL
                             on
                             that day.</p>
@@ -179,19 +185,22 @@
                 <div class="accordian_hidden_text max-w-850 pb-4">
                     <div class="d-flex align-items-baseline gap-2 pt-2">
                         <div class="dots"></div>
-                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">Login into KeepSL via
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">Login into
+                            KeepSL via
                             your
                             broker.</p>
                     </div>
                     <div class="d-flex align-items-baseline gap-2">
                         <div class="dots"></div>
-                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">Create a live
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">Create a
+                            live
                             deployment
                             to place an order and verify it in your broker terminal.</p>
                     </div>
                     <div class="d-flex align-items-baseline gap-2">
                         <div class="dots"></div>
-                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">NOTE :You must log in
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0 md-text-sm">NOTE :You
+                            must log in
                             daily to KeepSL via the same broker account for orders that need to be executed from KeepSL
                             on
                             that day.</p>
@@ -334,6 +343,14 @@
             </div>
         </div>
     </footer>
+
+    <!-- scroll to top -->
+
+    <section class="scroll_top position-fixed shadow cursor z-50">
+        <div class="scroll_box">
+            <img src="./assets/images/svg/scroll_top_icon.svg" alt="scroll to top icon" class="w-100 h-100">
+        </div>
+    </section>
 
     <!---------------- slider links ------------>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
