added scroll to top changes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body class="wideProp">
+<body class="wideProp position-relative pos-unset">
 
     <!---------------------------- slider Section ------------------------>
     <section class="py-Broker">
@@ -295,10 +295,10 @@
                         <a href="#"><img src="./assets/images/png/Keepsl_logo.png" class="w-100 h-100"
                                 alt="footer logo"></a>
                     </div>
-                    <p class="max-w-footerTxt font-sora fw-normal text-base text-white pyFooterColTxt mb-0">KEEPSl
-                        TECHNOLOGIES LLP
-                        PUTTENAHALLI(V) JP
-                        NAGAR, 7TH PHASE BENGALURU, KARNATAKA,INDIA 560078</p>
+                    <p
+                        class="max-w-footerTxt font-sora fw-normal text-base text-white pyFooterColTxt mb-0 text-lowercase">
+                        KEEPSl
+                        TECHNOLOGIES LLP PUTTENAHALLI(V) JP NAGAR, 7TH PHASE BENGALURU, KARNATAKA,INDIA 560078</p>
                     <div class="d-flex align-items-start justify-content-start flex-column">
                         <a href="mailto:whatisthis@gmail.com"
                             class="font-sora fw-normal text-sm text-white">Email: support@keepsl.com</a>
@@ -334,9 +334,9 @@
                     </a>
                 </div>
             </div>
-            <div class="line"></div>
+            <div class="line d-sm-none d-block"></div>
             <div
-                class="d-flex align-items-center justify-content-sm-between justify-content-center pt-copyright flex-sm-nowrap flex-wrap">
+                class="d-flex align-items-center justify-content-sm-between justify-content-center flex-sm-row flex-column pt-copyright flex-sm-nowrap flex-wrap">
                 <p class="font-sora fw-normal text-footer text-white opacity-65 mb-sm-0 mb-1">© 2024 KeepSL. All rights
                     reserved.</p>
                 <p class="font-sora fw-normal text-footer text-white opacity-65">Privecy Policy. Terms & Condition</p>
@@ -346,7 +346,7 @@
 
     <!-- scroll to top -->
 
-    <section class="scroll_top position-fixed shadow cursor z-50">
+    <section class="scroll_top position-absolute pos-xxl-fix shadow cursor z-50">
         <div class="scroll_box">
             <img src="./assets/images/svg/scroll_top_icon.svg" alt="scroll to top icon" class="w-100 h-100">
         </div>
