removed margin from one p tag

--- a/index.html
+++ b/index.html
@@ -339,7 +339,8 @@
                 class="d-flex align-items-center justify-content-sm-between justify-content-center flex-sm-row flex-column pt-copyright flex-sm-nowrap flex-wrap">
                 <p class="font-sora fw-normal text-footer text-white opacity-65 mb-sm-0 mb-1">© 2024 KeepSL. All rights
                     reserved.</p>
-                <p class="font-sora fw-normal text-footer text-white opacity-65">Privecy Policy. Terms & Condition</p>
+                <p class="font-sora fw-normal text-footer text-white opacity-65 mb-0">Privecy Policy. Terms & Condition
+                </p>
             </div>
         </div>
     </footer>
