added change in the faq branch

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 the
                 product and billing.
             </p>
-            <div class="accordion mt_lg_40" id="accordionExample">
+            <div class="accordion mt_lg_40 mt-4" id="accordionExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button font-sora fw-semibold text-faqBlack text-xmd md-text-lg mb-0"
